Fix stake section. remove image on small screens

--- a/css/style.css
+++ b/css/style.css
@@ -185,9 +185,9 @@ h2 {
     /* height: 600px ; */
 }
 
-.section-stake .topic {
+/* .section-stake .topic {
     width: 100%;
-}
+} */
 
 .section-stake h2 {
     font-size: 3em;
